| Summary: | ASTERISK-29748: bridging: Infinite loop when both Local channel halves in same bridge | ||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||
| Date Opened: | 2021-11-16 04:10:20.000-0600 | Date Closed: | 2021-11-19 08:15:31.000-0600 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/Bridging | ||
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | As frames that go in a Local channel come out the other side... when both halves are in the same bridge it causes an infinite loop. Let's prevent that from happening. | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2021-11-19 08:15:32.084-0600 Change 17474 merged by Friendly Automation: bridge: Deny full Local channel pair in bridge. [https://gerrit.asterisk.org/c/asterisk/+/17474|https://gerrit.asterisk.org/c/asterisk/+/17474] By: Friendly Automation (friendly-automation) 2021-11-19 08:42:00.685-0600 Change 17544 merged by George Joseph: bridge: Deny full Local channel pair in bridge. [https://gerrit.asterisk.org/c/asterisk/+/17544|https://gerrit.asterisk.org/c/asterisk/+/17544] By: Friendly Automation (friendly-automation) 2021-11-19 08:42:32.647-0600 Change 17543 merged by George Joseph: bridge: Deny full Local channel pair in bridge. [https://gerrit.asterisk.org/c/asterisk/+/17543|https://gerrit.asterisk.org/c/asterisk/+/17543] By: Friendly Automation (friendly-automation) 2021-11-19 08:42:47.950-0600 Change 17542 merged by George Joseph: bridge: Deny full Local channel pair in bridge. [https://gerrit.asterisk.org/c/asterisk/+/17542|https://gerrit.asterisk.org/c/asterisk/+/17542] | ||||